--- a/mauiBlazor/wwwroot/index.html
+++ b/mauiBlazor/wwwroot/index.html
@@ -10,7 +10,7 @@
 	<link href="_content/DevExpress.Blazor.Themes/bootstrap-external.bs5.min.css" rel="stylesheet" />
 	<link href="mauiBlazor.styles.css" rel="stylesheet" />
 	<link rel="stylesheet" href="css/pulse/bootstrap.min.css" />
-	<link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+	<link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
 </head>
 
 <body>
