--- a/mauiBlazor/wwwroot/index.html
+++ b/mauiBlazor/wwwroot/index.html
@@ -27,7 +27,7 @@
 
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
 	<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
